Corretto errore con il comando bash e corretto algoritmo conteggio parole